--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -19,5 +19,6 @@ source = ~/.config/hypr/bindings.conf
 source = ~/.config/hypr/looknfeel.conf
 source = ~/.config/hypr/autostart.conf
 
-windowrule = opacity 0.65 0.35 override, match:class Alacritty-scratchpad
+windowrule = opacity 0.85 0.65 override, match:class Alacritty-scratchpad
 windowrule = xray on override, dim_around on override, match:class Alacritty-scratchpad
+# windowrulev2 = workspace unset, workspace:special:Alacritty-scratchpad
