[WIP] Auto checkin 2026-02-09 09:49

--- a/hypr/bindings.conf
+++ b/hypr/bindings.conf
@@ -20,7 +20,7 @@ bindd = SUPER SHIFT, SLASH, Passwords, exec, omarchy-launch-webapp "https://pass
 bindd = SUPER, Q, ChatGPT, exec, omarchy-launch-webapp "https://chatgpt.com/"
 bindd = SUPER SHIFT, X, X, exec, omarchy-launch-webapp "https://x.com/"
 bindd = SUPER SHIFT ALT, X, X Post, exec, omarchy-launch-webapp "https://x.com/compose/post"
-bindd = SUPER, E, Thundermail, exec, thunderbird
+bindd = SUPER , E, Email, exec, omarchy-launch-webapp "https://mail.proton.me"
 
 # changing window sized
 bind = SUPER, R, submap, resize
