--- a/bash_custom/exports.conf
+++ b/bash_custom/exports.conf
@@ -6,6 +6,9 @@ export ANDROID_SDK_ROOT=/opt/android-sdk
 export ANDROID_HOME=/opt/android-sdk
 export ANDROID_AVD_HOME="$HOME/.android/avd"
 
+# using UV instead of pip for python scripting
+export $HOME/.local/share/../bin/env
+
 export PATH="$PATH:\
 $ANDROID_SDK_ROOT/cmdline-tools/latest/bin:\
 $ANDROID_SDK_ROOT/platform-tools:\
