--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -21,4 +21,4 @@ source = ~/.config/hypr/autostart.conf
 
 windowrule = opacity 0.85 0.65 override, match:class Alacritty-scratchpad
 windowrule = xray on override, dim_around on override, match:class Alacritty-scratchpad
-# windowrulev2 = workspace unset, workspace:special:Alacritty-scratchpad
+windowrule = workspace previous, match:workspace name:special:alacritty, match:class negative:^Alacritty-scratchpad$
