--- a/hypr/autostart.conf
+++ b/hypr/autostart.conf
@@ -3,6 +3,9 @@
 # open terminal on start
 exec-once = ~/.config/hypr/scripts/toggle-alacritty-scratchpad.sh
 
+# toggle terminal on start up
+exec-once = ~/.config/bash_custom/scripts/omarchy-random-theme.sh
+
 # handle monitor changes
 exec-once = ~/.config/omarchy/scripts/lid-monitor-adjust.sh
 monitor-added = ~/.config/omarchy/scripts/lid-monitor-adjust.sh
