--- a/hypr/bindings.conf
+++ b/hypr/bindings.conf
@@ -3,7 +3,8 @@
 
 # Alacritty scratchpad toggle
 bindd = SUPER, grave, Toggle Alacritty scratchpad, exec, ~/.config/hypr/scripts/toggle-alacritty-scratchpad.sh
-bindd = SUPER SHIFT, F, File manager, exec, uwsm-app -- nautilus --new-window ~/ProtonDrive/steele_company/clients/
+bindd = SUPER, RETURN, Ghosty Terminal, exec, ghostty
+bindd = SUPER SHIFT, F, File manager, exec, uwsm-app -- nautilus --new-window
 bindd = SUPER SHIFT, B, Browser, exec, omarchy-launch-browser
 bindd = SUPER SHIFT ALT, B, Browser (private), exec, omarchy-launch-browser --private
 bindd = SUPER SHIFT, M, Music, exec, omarchy-launch-or-focus spotify
@@ -12,7 +13,6 @@ bindd = SUPER SHIFT, D, Docker, exec, omarchy-launch-tui lazydocker
 bindd = SUPER SHIFT, G, Github, exec, omarchy-launch-webapp "https://github.com/"
 bindd = SUPER SHIFT, C, Signal, exec, omarchy-launch-or-focus ^signal$ "uwsm-app -- signal-desktop"
 bindd = SUPER SHIFT, O, Obsidian, exec, omarchy-launch-or-focus ^obsidian$ "uwsm-app -- obsidian -disable-gpu --enable-wayland-ime"
-bindd = SUPER SHIFT, W, Typora, exec, uwsm-app -- typora --enable-wayland-ime
 bindd = SUPER SHIFT, BACKSLASH, Cloud, exec, omarchy-launch-webapp "https://drive.proton.me"
 bindd = SUPER SHIFT, SLASH, Passwords, exec, omarchy-launch-webapp "https://pass.proton.me"
 # If your web app url contains #, type it as ## to prevent hyprland treating it as a comment
