adding chatgpt and editor scratchpads

--- a/hypr/bindings.conf
+++ b/hypr/bindings.conf
@@ -7,8 +7,9 @@ bindd = SUPER, RETURN, Ghosty Terminal, exec, ghostty
 bindd = SUPER SHIFT, F, File manager, exec, uwsm-app -- nautilus --new-window
 bindd = SUPER SHIFT, B, Browser, exec, omarchy-launch-browser
 bindd = SUPER SHIFT ALT, B, Browser (private), exec, omarchy-launch-browser --private
-bindd = SUPER SHIFT, M, Music, exec, omarchy-launch-or-focus spotify
+bindd = SUPER SHIFT, S, Spotify, exec, omarchy-launch-or-focus spotify
 bindd = SUPER SHIFT, E, Editor, exec, omarchy-launch-editor
+bindd = SUPER, E, Editor scratchpad, exec, ~/.config/hypr/scripts/toggle-editor-scratchpad.sh
 bindd = SUPER SHIFT, D, Docker, exec, omarchy-launch-tui lazydocker
 bindd = SUPER SHIFT, G, Github, exec, omarchy-launch-webapp "https://github.com/"
 bindd = SUPER SHIFT, C, Signal, exec, omarchy-launch-or-focus ^signal$ "uwsm-app -- signal-desktop"
@@ -16,10 +17,10 @@ bindd = SUPER SHIFT, O, Obsidian, exec, omarchy-launch-or-focus ^obsidian$ "uwsm
 bindd = SUPER SHIFT, BACKSLASH, Cloud, exec, omarchy-launch-webapp "https://drive.proton.me"
 bindd = SUPER SHIFT, SLASH, Passwords, exec, omarchy-launch-webapp "https://pass.proton.me"
 # If your web app url contains #, type it as ## to prevent hyprland treating it as a comment
-bindd = SUPER, Q, ChatGPT, exec, omarchy-launch-webapp "https://chatgpt.com/"
+bindd = SUPER, Q, ChatGPT scratchpad, exec, ~/.config/hypr/scripts/toggle-chatgpt-scratchpad.sh
 bindd = SUPER SHIFT, X, X, exec, omarchy-launch-webapp "https://x.com/"
 bindd = SUPER SHIFT ALT, X, X Post, exec, omarchy-launch-webapp "https://x.com/compose/post"
-bindd = SUPER , E, Email, exec, omarchy-launch-webapp "https://mail.proton.me"
+bindd = SUPER , M, Email, exec, omarchy-launch-webapp "https://mail.proton.me"
 
 # changing window sized
 bind = SUPER, R, submap, resize
