--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -22,3 +22,15 @@ source = ~/.config/hypr/autostart.conf
 windowrule = opacity 0.85 0.65 override, match:class Alacritty-scratchpad
 windowrule = xray on override, dim_around on override, match:class Alacritty-scratchpad
 windowrule = workspace previous, match:workspace name:special:alacritty, match:class negative:^Alacritty-scratchpad$
+
+windowrule = opacity 0.85 0.65 override, match:class Alacritty-scratchpad
+windowrule = xray on override, dim_around on override, match:class Alacritty-scratchpad
+windowrule = workspace previous, match:workspace name:special:alacritty, match:class negative:^Alacritty-scratchpad$
+
+windowrule = opacity 0.85 0.65 override, match:class brave-chatgpt.com__-Default
+windowrule = xray on override, dim_around on override, match:class brave-chatgpt.com__-Default
+windowrule = workspace previous, match:workspace name:special:chatgpt, match:class negative:^brave-chatgpt.com__-Default$
+
+windowrule = opacity 0.85 0.65 override, match:class Editor-scratchpad
+windowrule = xray on override, dim_around on override, match:class Editor-scratchpad
+windowrule = workspace previous, match:workspace name:special:editor, match:class negative:^Editor-scratchpad$
