adding group to ai-scratchpad to include grok, local, perplexity

--- a/hypr/bindings.conf
+++ b/hypr/bindings.conf
@@ -17,7 +17,7 @@ bindd = SUPER SHIFT, O, Obsidian, exec, omarchy-launch-or-focus ^obsidian$ "uwsm
 bindd = SUPER SHIFT, BACKSLASH, Cloud, exec, omarchy-launch-webapp "https://drive.proton.me"
 bindd = SUPER SHIFT, SLASH, Passwords, exec, omarchy-launch-webapp "https://pass.proton.me"
 # If your web app url contains #, type it as ## to prevent hyprland treating it as a comment
-bindd = SUPER, Q, ChatGPT scratchpad, exec, ~/.config/hypr/scripts/toggle-chatgpt-scratchpad.sh
+bindd = SUPER, Q, AI scratchpad, exec, ~/.config/hypr/scripts/toggle-ai-scratchpad.sh
 bindd = SUPER SHIFT, X, X, exec, omarchy-launch-webapp "https://x.com/"
 bindd = SUPER SHIFT ALT, X, X Post, exec, omarchy-launch-webapp "https://x.com/compose/post"
 bindd = SUPER , M, Email, exec, omarchy-launch-webapp "https://mail.proton.me"
