--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -27,9 +27,15 @@ windowrule = opacity 0.85 0.65 override, match:class Alacritty-scratchpad
 windowrule = xray on override, dim_around on override, match:class Alacritty-scratchpad
 windowrule = workspace previous, match:workspace name:special:alacritty, match:class negative:^Alacritty-scratchpad$
 
+windowrule = opacity 0.85 0.65 override, match:class brave-192.168.2.15__-Default
+windowrule = xray on override, dim_around on override, match:class brave-192.168.2.15__-Default
 windowrule = opacity 0.85 0.65 override, match:class brave-chatgpt.com__-Default
 windowrule = xray on override, dim_around on override, match:class brave-chatgpt.com__-Default
-windowrule = workspace previous, match:workspace name:special:chatgpt, match:class negative:^brave-chatgpt.com__-Default$
+windowrule = opacity 0.85 0.65 override, match:class brave-grok.com__-Default
+windowrule = xray on override, dim_around on override, match:class brave-grok.com__-Default
+windowrule = opacity 0.85 0.65 override, match:class brave-www.perplexity.ai__-Default
+windowrule = xray on override, dim_around on override, match:class brave-www.perplexity.ai__-Default
+windowrule = workspace previous, match:workspace name:special:chatgpt, match:class negative:^(brave-192.168.2.15__-Default|brave-chatgpt.com__-Default|brave-grok.com__-Default|brave-www.perplexity.ai__-Default)$
 
 windowrule = opacity 0.85 0.65 override, match:class Editor-scratchpad
 windowrule = xray on override, dim_around on override, match:class Editor-scratchpad
