--- a/bash_custom/aliases.conf
+++ b/bash_custom/aliases.conf
@@ -19,6 +19,10 @@ alias theme="${BASH_CUSTOM_DIR}/scripts/omarchy-random-theme.sh"
 
 alias backup="${BASH_CUSTOM_DIR}/scripts/pull-server-backups.sh && ${BASH_CUSTOM_DIR}/scripts/borg-backup.sh"
 
+# Sync Proton Drive functions
+
+alias sync-drive="${BASH_CUSTOM_DIR}/scripts/sync_drive/sync_drive.sh"
+
 # cargo() {
 # 	# Bypass all checks and pass through directly
 # 	if [[ -n "$CARGO_BYPASS_CHECKS" ]]; then
