--- a/bash_custom/aliases.conf
+++ b/bash_custom/aliases.conf
@@ -7,7 +7,7 @@ function gmod {
 alias dcu="docker-compose up"
 alias dcd="docker-compose down"
 
-alias sync-rust-template="$RUST_TEMPLATE_DIR/sync_rust_template.sh"
+alias sync-rust-template="~/Work/back_end/rust_template/sync_rust_template.sh"
 
 alias sync-nvim-projects="${BASH_CUSTOM_DIR}/scripts/update-neovim-projects.sh"
 
@@ -22,6 +22,10 @@ alias backup="${BASH_CUSTOM_DIR}/scripts/pull-server-backups.sh && ${BASH_CUSTOM
 # Sync Proton Drive functions
 
 alias sync-drive="${BASH_CUSTOM_DIR}/scripts/sync_drive/sync_drive.sh"
+
+# Sync Storj cloud storage
+
+alias storj="${BASH_CUSTOM_DIR}/scripts/storj/sync_storj.sh"
 
 # cargo() {
 # 	# Bypass all checks and pass through directly
