--- a/bash_custom/exports.conf
+++ b/bash_custom/exports.conf
@@ -1,6 +1,8 @@
 export genUID=$(id -u)
 export genGID=$(id -g)
 
+export RUST_TEMPLATE_DIR=$HOME/Work/back_end/rust_template
+
 # --- Android SDK (Arch layout) ---
 export ANDROID_SDK_ROOT=/opt/android-sdk
 export ANDROID_HOME=/opt/android-sdk
