--- a/hypr/hypridle.conf
+++ b/hypr/hypridle.conf
@@ -2,7 +2,7 @@ general {
     # Prefer one lock entrypoint (your Omarchy wrapper), and use it everywhere.
     lock_cmd = pidof hyprlock || omarchy-lock-screen
 
-    before_sleep_cmd = loginctl lock-session
+    before_sleep_cmd = systemctl --user start --wait storj-push.service && loginctl lock-session
     after_sleep_cmd = hyprctl dispatch dpms on
     inhibit_sleep = 3
 }
@@ -16,7 +16,7 @@ listener {
 # lock at 20 minutes (this was the bug)
 listener {
     timeout = 1200
-    on-timeout = loginctl lock-session
+    on-timeout = systemctl --user start --wait storj-push.service && loginctl lock-session
 }
 
 # display off at 25 minutes
