--- a/hypr/bindings.conf
+++ b/hypr/bindings.conf
@@ -14,13 +14,14 @@ bindd = SUPER SHIFT, D, Docker, exec, omarchy-launch-tui lazydocker
 bindd = SUPER SHIFT, G, Github, exec, omarchy-launch-webapp "https://github.com/"
 bindd = SUPER SHIFT, C, Signal, exec, omarchy-launch-or-focus ^signal$ "uwsm-app -- signal-desktop"
 bindd = SUPER SHIFT, O, Obsidian, exec, omarchy-launch-or-focus ^obsidian$ "uwsm-app -- obsidian -disable-gpu --enable-wayland-ime"
-bindd = SUPER SHIFT, BACKSLASH, Cloud, exec, omarchy-launch-webapp "https://drive.proton.me"
+bindd = SUPER, BACKSLASH, Cloud, exec, omarchy-launch-webapp "https://drive.proton.me"
 bindd = SUPER SHIFT, SLASH, Passwords, exec, omarchy-launch-webapp "https://pass.proton.me"
+bindd = SUPER SHIFT, BACKSLASH, Storj, exec, omarchy-launch-webapp "https://us1.storj.io/projects"
 # If your web app url contains #, type it as ## to prevent hyprland treating it as a comment
 bindd = SUPER, Q, AI scratchpad, exec, ~/.config/hypr/scripts/toggle-ai-scratchpad.sh
 bindd = SUPER SHIFT, X, X, exec, omarchy-launch-webapp "https://x.com/"
 bindd = SUPER SHIFT ALT, X, X Post, exec, omarchy-launch-webapp "https://x.com/compose/post"
-bindd = SUPER , M, Email, exec, omarchy-launch-webapp "https://mail.proton.me"
+bindd = SUPER SHIFT, M, Email, exec, omarchy-launch-webapp "https://mail.proton.me"
 
 # changing window sized
 bind = SUPER, R, submap, resize
